# btx-wallet

./: .gitattributes  .gitignore  AUDIT-CHECKLIST.md  DESKTOP-RELEASE-CHECKLIST.md  PROCESS.md  README.md  RELEASE-CHECKLIST.md  SECURITY.md
.github/workflows/: desktop-release.yml  release.yml
desktop/: README.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
desktop/src/: App.svelte  styles.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs  main.rs
desktop/src/components/: ModeSwitch.svelte  TransactionList.svelte
desktop/src/lib/: api.ts  format.ts  messages.js  nodes.js  shielded.js  types.ts  ui.js
desktop/test/: format.test.mjs  messages.test.mjs  nodes.test.mjs  production-assets.test.mjs  shielded-guidance.test.mjs  ui-state.test.mjs
docs/: FIRST-RUN.md  PHASE0-QT-USABILITY-BACKPORT.md  PHASE1-LIGHT-CLIENT.md  REPRODUCIBLE-BUILDS.md  btx-pruned.conf  release-signing-key.asc
patches/btx-v0.29.7/: appleclang-shielded-wallet-structured-binding.patch  qt-shielded-usability-backport.patch
scripts/: build-qt-wallet.sh  launch-btx-qt-pruned.cmd  launch-btx-qt-pruned.sh  sign-release-artifacts.sh  verify-no-new-crypto.sh  verify-release-artifacts.sh
tests/: MANUAL-E2E-CHECKLIST.md
tests/e2e/: README.md  common.sh  consolidation-test.sh
tests/e2e/full-node/: rpc-console-test.sh  rpc-console.sh  shielded-send-test.sh  shielded-send.sh
tests/e2e/light-client/: consolidation.sh  (+4 more)
